hard-gists/5443399/run.log
=== Docker Run Log for 5443399 ===
Started at: Mi 29. Okt 15:41:35 CET 2025

[2025-10-29 15:41:35] START: Running container for 5443399
[2025-10-29 15:41:36] SUCCESS: Container f806f2287ff0f6bb936cde40233b7561752f32f1d6419201ec47dd0502623bb9 started for 5443399
=== Container logs for 5443399 ===
  File "/snippet.py", line 34
    print 'Usage: arg index [data_type]'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5443399 ===
[2025-10-29 15:41:38] INFO: Container f806f2287ff0f6bb936cde40233b7561752f32f1d6419201ec47dd0502623bb9 has stopped
